# rag-production-template

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
evals/: golden_dataset.json
evals/corpus/: python_dataclasses.txt  python_functools.txt  python_itertools.txt
rag/: __init__.py  config.py  logging.py
rag/api/: dependencies.py  main.py  schemas.py
rag/api/routers/: eval.py  health.py  ingest.py  query.py
rag/eval/: __init__.py  __main__.py  harness.py  metrics.py
rag/generation/: __init__.py  generator.py  llm_client.py  prompt_templates.py
rag/ingestion/: __init__.py  chunker.py  loaders.py  pipeline.py
rag/retrieval/: __init__.py  reranker.py  retriever.py
rag/vectorstore/: __init__.py  base.py  chroma.py  factory.py  qdrant.py
tests/: conftest.py
tests/integration/: conftest.py  test_eval_endpoint.py  test_health.py  test_ingest.py  test_query.py
tests/unit/: test_chunker.py  test_config.py  test_generator.py  test_harness.py  test_llm_client.py  test_loaders.py  test_metrics.py  test_pipeline.py  test_prompt_templates.py  test_reranker.py  test_retriever.py  test_vectorstore_chroma.py  test_vectorstore_factory.py
