[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-production-template"
version = "0.1.0"
description = "Production-ready RAG (Retrieval-Augmented Generation) reference implementation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Martin" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openai>=1.30",
    "chromadb>=0.5.0",
    "pypdf>=4.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["rag*"]
exclude = ["tests*", "evals*", "notebooks*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["notebooks/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "pypdf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=rag",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that exercise multiple modules",
    "slow: tests that take longer than 1s",
]

[tool.coverage.run]
branch = true
source = ["rag"]
omit = [
    "rag/eval/__main__.py",
    "rag/api/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
